# InsituEMDCorrelation

./: .gitignore  Workspace_With_Proj1.code-workspace  stuff.tex  workspace.code-workspace
.git.bfg-report/2020-12-02/08-08-34/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
Scripts/: decorators_utils.py  physicsHelpers.py  pyproject.toml  signalHelpers.py
Scripts/Data/: AnySpacecraft_data.py  STEREO_obs.py  helpers.py  plot_spice_orbit.py
Scripts/EMD/: applyEMD.py  baseEMD.py  pspSDAEMD.py  pspSoloEMD.py
Scripts/EMD/.local/: pyvenv.cfg
Scripts/EMD/cases/: altCases.pickle  cases.pickle  cases_1-5.pickle  cases_April_2020_SolO.pickle  cases_STA_PSP.pickle  createPSPSolOcases.py  findAdditionalcase.py
Scripts/EMD/importsProj3/: SignalAndSfunc.py  signalAPI.py  signalHelpers.py
Scripts/ISSI/: PSP_EMD_insitu.py
Scripts/Imports/: Spacecraft.py  physicsHelpers.py
Scripts/Orbits/: EXAMPLE_plot_spice_orbit.py  PSP_SolO_Sept.py  WORKING_ORBIT_SAMPLE.py  plot_solo_psp.py
Scripts/Plots/: AnySpacecraft_data.py  Other_events.txt  cdfRead.ipynb  cdfReader.py  createCSVsAndOrbits.py  findHump.ipynb  pspSolOErrorsData.ipynb  psp_SolO_e6.py
Scripts/Plots/RandomTests/: parkerSolarModel.ipynb
Scripts/Signal_Analysis/: ISSI_PSP_EMD_insitu.py  helpers.py  raytest.py  tests.py
Scripts/archive/: pspSoloEMD.py
